# GPU-programming-2024-25

./: README.md
Lab00/: README.md
Lab00/C++Threads/: Makefile  cpp_thread_00.cpp  cpp_thread_01.cpp  cpp_thread_02.cpp  posix_process_00.cpp  posix_process_01.cpp  posix_process_02.cpp  posix_thread_00.cpp  posix_thread_01.cpp  posix_thread_02.cpp
Lab00/MPI/: CMakeLists.txt  Makefile  MatrixMatrixProduct.cpp  blocking.c  environ.c  hybrid.c  nonblock.c  pass_vector.c
Lab00/OpenMP/: CMakeLists.txt  Makefile  critical.directive.c  for.directive.c  hello.c  hello.f  parallel_matrix_mul.c  parallelfor.directive.c  sections.directive.c
Lab01/: README.md
Lab01/solutions/matmul/: main.cpp  run_test
Lab01/solutions/matmul/include/: cuda_kernel.cuh
Lab01/solutions/matmul/src/: cuda_kernel.cu
Lab01/solutions/vectadd/: main.cpp  run_test
Lab01/solutions/vectadd/include/: cuda_kernel.cuh
Lab01/solutions/vectadd/src/: cuda_kernel.cu
Lab01/template/: Makefile  main.cpp
Lab01/template/include/: cuda_kernel.cuh
Lab01/template/src/: cuda_kernel.cu
Lab02/: README.md
Lab02/matmul/: Makefile  main.cpp
Lab02/matmul/src/: cuda_kernel.cu
Lab02/saxpy_vect/: Makefile  main.cpp
Lab02/saxpy_vect/include/: cuda_kernel.cuh
Lab02/saxpy_vect/src/: cuda_kernel.cu
Lab02/solutions/matmul/: main.cpp
Lab02/solutions/matmul/src/: cuda_kernel.cu
Lab02/solutions/rgb2gray_v1/: Makefile
Lab02/solutions/rgb2gray_v2/: main.cpp
Lab02/solutions/saxpy_vect/: Makefile  main.cpp  run_test
Lab03/: README.md
Lab03/solutions/: matrix_mul_shared_solution.cu
Lab03/solutions/1-D_Conv/: Makefile  main.cpp
Lab03/solutions/2-D_Conv/: main.cpp
Lab04/: README.md
Lab04/solutions/Ex2/: async.cu
Lab05/: README.md
Lab06/: README.md
Lab07/: README.md
(+10 files in other folders)
